--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.5",
     "expo": "~48.0.18",
+    "expo-checkbox": "~2.3.1",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
@@ -23,11 +24,13 @@
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-task-manager": "~11.1.1",
+    "mongodb": "^6.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "*",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
